# not_twitter

./: .gitignore
Haskell_backend/: project.cabal  twitter.db
Haskell_backend/app/: Main.hs
Haskell_backend/src/: Api.hs  Bdd.hs
Vue_frontend/: index.html  package-lock.json  package.json
Vue_frontend/src/: App.vue
Vue_frontend/src/assets/: main.css
Vue_frontend/src/components/: FormNewUser.vue  ModelLogin.vue  NavBar.vue  PersonList.vue  Profile.vue
Vue_frontend/src/components/ProfileComponents/: HeaderProfile.vue  Profile.vue
Vue_frontend/src/components/TweetComponents/: Tweet.vue
Vue_frontend/src/router/: index.js
